// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preset-grid > custom class name 1`] = `
"/* layer: default */
.custom-container,
.custom-container-fluid{--un-gutter-x:24px;--un-gutter-y:0;width:100%;padding-right:calc(var(--un-gutter-x) * 0.5);padding-left:calc(var(--un-gutter-x) * 0.5);margin-right:auto;margin-left:auto;}
.custom-row{--un-gutter-x:24px;--un-gutter-y:0;display:flex;flex-wrap:wrap;margin-top:calc(-1 * var(--un-gutter-y));margin-right:calc(-.5 * var(--un-gutter-x));margin-left:calc(-.5 * var(--un-gutter-x));}
.custom-row > *{flex-shrink:0;width:100%;max-width:100%;padding-right:calc(var(--un-gutter-x) * .5);padding-left:calc(var(--un-gutter-x) * .5);margin-top:var(--un-gutter-y);}
.custom-col{flex:1 0 0%;}
.custom-col-1{flex:0 0 auto;width:8.333333333333332%;}
.custom-col-12{flex:0 0 auto;width:100%;}
@media (min-width: 1024px){
.custom-container{max-width:1024px;}
.lg\\:custom-col-4{flex:0 0 auto;width:33.33333333333333%;}
}
@media (min-width: 1280px){
.xl\\:custom-col-5{flex:0 0 auto;width:41.66666666666667%;}
}
@media (min-width: 1536px){
.custom-container{max-width:1536px;}
}
@media (min-width: 640px){
.custom-container{max-width:640px;}
.sm\\:custom-col-2{flex:0 0 auto;width:16.666666666666664%;}
}
@media (min-width: 768px){
.md\\:custom-col-3{flex:0 0 auto;width:25%;}
}"
`;

exports[`preset-grid > different length unit 1`] = `
"/* layer: default */
.flex-container{--un-gutter-x:24px;--un-gutter-y:0;width:100%;padding-right:calc(var(--un-gutter-x) * 0.5);padding-left:calc(var(--un-gutter-x) * 0.5);margin-right:auto;margin-left:auto;}
.flex-container-fluid{--un-gutter-x:1.5rem;--un-gutter-y:0;width:100%;padding-right:calc(var(--un-gutter-x) * 0.5);padding-left:calc(var(--un-gutter-x) * 0.5);margin-right:auto;margin-left:auto;}
.row{--un-gutter-x:1.5rem;--un-gutter-y:0;display:flex;flex-wrap:wrap;margin-top:calc(-1 * var(--un-gutter-y));margin-right:calc(-.5 * var(--un-gutter-x));margin-left:calc(-.5 * var(--un-gutter-x));}
.row > *{flex-shrink:0;width:100%;max-width:100%;padding-right:calc(var(--un-gutter-x) * .5);padding-left:calc(var(--un-gutter-x) * .5);margin-top:var(--un-gutter-y);}
.col{flex:1 0 0%;}
.col-1{flex:0 0 auto;width:8.333333333333332%;}
.col-12{flex:0 0 auto;width:100%;}
.g-1{--un-gutter-x:16px;--un-gutter-y:1rem;}
.gx-3{--un-gutter-x:3rem;}
.gy-6{--un-gutter-y:6rem;}
@media (min-width: 1024px){
.flex-container{max-width:1024px;}
.lg\\:col-6{flex:0 0 auto;width:50%;}
}
@media (min-width: 1536px){
.flex-container{max-width:1536px;}
}
@media (min-width: 640px){
.flex-container{max-width:640px;}
.sm\\:col-12{flex:0 0 auto;width:100%;}
}
@media (min-width: 768px){
.md\\:col{flex:1 0 0%;}
}"
`;

exports[`preset-grid > generate col 1`] = `
"/* layer: default */
.col{flex:1 0 0%;}
.col-1{flex:0 0 auto;width:8.333333333333332%;}
.col-12{flex:0 0 auto;width:100%;}
.col-6{flex:0 0 auto;width:50%;}
@media (min-width: 1024px){
.lg\\:col-6{flex:0 0 auto;width:50%;}
}
@media (min-width: 640px){
.sm\\:col-12{flex:0 0 auto;width:100%;}
}
@media (min-width: 768px){
.md\\:col{flex:1 0 0%;}
.md\\:col-1{flex:0 0 auto;width:8.333333333333332%;}
}"
`;

exports[`preset-grid > generate flex-container 1`] = `
"/* layer: default */
.flex-container,
.flex-container-fluid{--un-gutter-x:24px;--un-gutter-y:0;width:100%;padding-right:calc(var(--un-gutter-x) * 0.5);padding-left:calc(var(--un-gutter-x) * 0.5);margin-right:auto;margin-left:auto;}
@media (min-width: 1024px){
.flex-container{max-width:1024px;}
}
@media (min-width: 1536px){
.flex-container{max-width:1536px;}
}
@media (min-width: 640px){
.flex-container{max-width:640px;}
}"
`;

exports[`preset-grid > generate gutter 1`] = `
"/* layer: default */
.g-12{--un-gutter-x:192px;--un-gutter-y:192px;}
.gx-0{--un-gutter-x:0px;}
.gx-6{--un-gutter-x:96px;}
.gy-0{--un-gutter-y:0px;}
.gy-1{--un-gutter-y:16px;}"
`;

exports[`preset-grid > generate gutter 2`] = `
"/* layer: default */
.g-1{--un-gutter-x:16px;--un-gutter-y:16px;}
.gx-3{--un-gutter-x:48px;}
.gy-6{--un-gutter-y:96px;}"
`;

exports[`preset-grid > generate row 1`] = `
"/* layer: default */
.row{--un-gutter-x:24px;--un-gutter-y:0;display:flex;flex-wrap:wrap;margin-top:calc(-1 * var(--un-gutter-y));margin-right:calc(-.5 * var(--un-gutter-x));margin-left:calc(-.5 * var(--un-gutter-x));}
.row > *{flex-shrink:0;width:100%;max-width:100%;padding-right:calc(var(--un-gutter-x) * .5);padding-left:calc(var(--un-gutter-x) * .5);margin-top:var(--un-gutter-y);}"
`;

exports[`preset-grid > with other breakpoints 1`] = `
"/* layer: preflights */
*,::before,::after{--un-rotate:0;--un-rotate-x:0;--un-rotate-y:0;--un-rotate-z:0;--un-scale-x:1;--un-scale-y:1;--un-scale-z:1;--un-skew-x:0;--un-skew-y:0;--un-translate-x:0;--un-translate-y:0;--un-translate-z:0;--un-pan-x: ;--un-pan-y: ;--un-pinch-zoom: ;--un-scroll-snap-strictness:proximity;--un-ordinal: ;--un-slashed-zero: ;--un-numeric-figure: ;--un-numeric-spacing: ;--un-numeric-fraction: ;--un-border-spacing-x:0;--un-border-spacing-y:0;--un-ring-offset-shadow:0 0 rgb(0 0 0 / 0);--un-ring-shadow:0 0 rgb(0 0 0 / 0);--un-shadow-inset: ;--un-shadow:0 0 rgb(0 0 0 / 0);--un-ring-inset: ;--un-ring-offset-width:0px;--un-ring-offset-color:#fff;--un-ring-width:0px;--un-ring-color:rgb(147 197 253 / 0.5);--un-blur: ;--un-brightness: ;--un-contrast: ;--un-drop-shadow: ;--un-grayscale: ;--un-hue-rotate: ;--un-invert: ;--un-saturate: ;--un-sepia: ;--un-backdrop-blur: ;--un-backdrop-brightness: ;--un-backdrop-contrast: ;--un-backdrop-grayscale: ;--un-backdrop-hue-rotate: ;--un-backdrop-invert: ;--un-backdrop-opacity: ;--un-backdrop-saturate: ;--un-backdrop-sepia: ;}::backdrop{--un-rotate:0;--un-rotate-x:0;--un-rotate-y:0;--un-rotate-z:0;--un-scale-x:1;--un-scale-y:1;--un-scale-z:1;--un-skew-x:0;--un-skew-y:0;--un-translate-x:0;--un-translate-y:0;--un-translate-z:0;--un-pan-x: ;--un-pan-y: ;--un-pinch-zoom: ;--un-scroll-snap-strictness:proximity;--un-ordinal: ;--un-slashed-zero: ;--un-numeric-figure: ;--un-numeric-spacing: ;--un-numeric-fraction: ;--un-border-spacing-x:0;--un-border-spacing-y:0;--un-ring-offset-shadow:0 0 rgb(0 0 0 / 0);--un-ring-shadow:0 0 rgb(0 0 0 / 0);--un-shadow-inset: ;--un-shadow:0 0 rgb(0 0 0 / 0);--un-ring-inset: ;--un-ring-offset-width:0px;--un-ring-offset-color:#fff;--un-ring-width:0px;--un-ring-color:rgb(147 197 253 / 0.5);--un-blur: ;--un-brightness: ;--un-contrast: ;--un-drop-shadow: ;--un-grayscale: ;--un-hue-rotate: ;--un-invert: ;--un-saturate: ;--un-sepia: ;--un-backdrop-blur: ;--un-backdrop-brightness: ;--un-backdrop-contrast: ;--un-backdrop-grayscale: ;--un-backdrop-hue-rotate: ;--un-backdrop-invert: ;--un-backdrop-opacity: ;--un-backdrop-saturate: ;--un-backdrop-sepia: ;}
/* layer: default */
.flex-container,
.flex-container-fluid{--un-gutter-x:24px;--un-gutter-y:0;width:100%;padding-right:calc(var(--un-gutter-x) * 0.5);padding-left:calc(var(--un-gutter-x) * 0.5);margin-right:auto;margin-left:auto;}
.row{--un-gutter-x:24px;--un-gutter-y:0;display:flex;flex-wrap:wrap;margin-top:calc(-1 * var(--un-gutter-y));margin-right:calc(-.5 * var(--un-gutter-x));margin-left:calc(-.5 * var(--un-gutter-x));}
.row > *{flex-shrink:0;width:100%;max-width:100%;padding-right:calc(var(--un-gutter-x) * .5);padding-left:calc(var(--un-gutter-x) * .5);margin-top:var(--un-gutter-y);}
.col{flex:1 0 0%;}
.col-1{flex:0 0 auto;width:8.333333333333332%;}
.col-12{flex:0 0 auto;width:100%;}
@media (min-width: 576px){
.sm\\:col-2{flex:0 0 auto;width:16.666666666666664%;}
}
@media (min-width: 768px){
.flex-container{max-width:768px;}
.md\\:col-3{flex:0 0 auto;width:25%;}
}
@media (min-width: 992px){
.lg\\:col-4{flex:0 0 auto;width:33.33333333333333%;}
}
@media (min-width: 1200px){
.flex-container{max-width:1200px;}
.xl\\:col-5{flex:0 0 auto;width:41.66666666666667%;}
}"
`;
